contract/cmd/contract/k8s/03-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: strip-contract-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/contract
