contract/cmd/contract/k8s/02-contract.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: contract
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contract
  template:
    metadata:
      labels:
        app: contract
    spec:
      containers:
        - name: contract
          # image: bright/contract:latest
          image: bright/contract:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: service-config
              mountPath: /etc/contract
      volumes:
        - name: service-config
          configMap:
            name: contract-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: contract
spec:
  ports:
    - name: http
      port: 30110
      targetPort: 30110
    - name: grpc
      port: 30111
      targetPort: 30111
    - name: healthz
      port: 30112
      targetPort: 30112
  selector:
    app: contract
