contract/cmd/contract/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: contract-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-contract-prefix@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/contract/
            pathType: Prefix
            backend:
              service:
                name: contract
                port:
                  number: 30110
